--- a/res/layout/activity_steel_drawing.xml
+++ b/res/layout/activity_steel_drawing.xml
@@ -1,28 +1,18 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".SteelDrawingActivity" >
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.v7.widget.GridLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+        android:useDefaultMargins="true"
+        android:alignmentMode="alignBounds"
+        android:columnOrderPreserved="false"
 
-            <TextView
+        android:columnCount="3">
+          <TextView
                 style="@style/inputLabel"
                 android:text="@string/inlet" />
-
-            <requestFocus />
 
             <EditText
                 android:id="@+id/txtinlet"
@@ -31,12 +21,6 @@
             <TextView
                 style="@style/measure"
                 android:text="mm" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
 
             <TextView
                 style="@style/inputLabel"
@@ -49,12 +33,6 @@
             <TextView
                 style="@style/measure"
                 android:text="mm" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
 
             <TextView
                 style="@style/inputLabel"
@@ -63,24 +41,16 @@
             <EditText
                 android:id="@+id/txtnofblocks"
                 style="@style/inputNumbers"
-                android:hint="Max 10 block" />
+                android:hint="Max 10 blocks" />
 
             <TextView
                 style="@style/measure"
                 android:text="N°" />
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.25"
-                android:text="@string/type_of_wire" />
-
+           <TextView
+                style="@style/inputLabel"
+                android:text="@string/type_of_wire" 
+            />
             <Spinner
                 android:id="@+id/typeofwire"
                 style="@style/inputNumbers" />
@@ -88,16 +58,12 @@
             <TextView
                 style="@style/measure"
                 android:text="#" />
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
 
             <TextView
                 style="@style/inputLabel"
-                android:text="@string/target_speed" />
+                android:text="@string/target_speed" 
+               />
 
             <EditText
                 android:id="@+id/txttargetspeed"
@@ -106,38 +72,15 @@
             <TextView
                 style="@style/measure"
                 android:text="m/s" />
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2mm"
-            android:orientation="horizontal" >
+      
+            <View/>
 
-            <View
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.25" />
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.65"
-                android:orientation="horizontal" >
-
-                <Button
+           <Button
                     android:id="@+id/btnSubmit"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
                     android:ems="5"
                     android:text="@string/confirm" />
-            </LinearLayout>
 
-            <View
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.10" />
-        </LinearLayout>
-    </LinearLayout>
+            <View/>
 
-</RelativeLayout>
+</android.support.v7.widget.GridLayout>
