--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -18,23 +18,15 @@
     </style>
 
     <style name="inputNumbers">
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_weight">0.65</item>
-        <item name="android:ems">10</item>
+        <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:inputType">number</item>
     </style>
     
     <style name="inputLabel">
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_weight">0.25</item>
+        <item name="android:layout_gravity">left</item>
     </style>
     
       <style name="measure">
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_weight">0.10</item>
-        <item name="android:gravity">center</item>
+        <item name="android:layout_gravity">center_horizontal</item>
     </style>
 </resources>
