--- a/res/layout/activity_steel_drawing.xml
+++ b/res/layout/activity_steel_drawing.xml
@@ -1,86 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.GridLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
         android:useDefaultMargins="true"
-        android:alignmentMode="alignBounds"
-        android:columnOrderPreserved="false"
-
-        android:columnCount="3">
+        app:columnCount="3"
+        app:rowCount="6">
+        
           <TextView
+                app:layout_column="0"
+                app:layout_row="0"
                 style="@style/inputLabel"
                 android:text="@string/inlet" />
 
             <EditText
+                app:layout_column="1"
+                app:layout_row="0"
                 android:id="@+id/txtinlet"
                 style="@style/inputNumbers" />
 
             <TextView
+                app:layout_column="2"
+                app:layout_row="0"
                 style="@style/measure"
                 android:text="mm" />
 
             <TextView
+                app:layout_column="0"
+                app:layout_row="1"
                 style="@style/inputLabel"
                 android:text="@string/outlet" />
 
             <EditText
+                app:layout_column="1"
+                app:layout_row="1"
                 android:id="@+id/txtoutlet"
                 style="@style/inputNumbers" />
 
             <TextView
+                app:layout_column="2"
+                app:layout_row="1"
                 style="@style/measure"
                 android:text="mm" />
 
             <TextView
+                app:layout_column="0"
+                app:layout_row="2"
                 style="@style/inputLabel"
                 android:text="@string/n_of_blocks" />
 
             <EditText
+                app:layout_column="1"
+                app:layout_row="2"
                 android:id="@+id/txtnofblocks"
                 style="@style/inputNumbers"
                 android:hint="Max 10 blocks" />
 
             <TextView
+                app:layout_column="2"
+                app:layout_row="2"
                 style="@style/measure"
                 android:text="N°" />
 
            <TextView
+                app:layout_column="0"
+                app:layout_row="3"
                 style="@style/inputLabel"
                 android:text="@string/type_of_wire" 
             />
             <Spinner
+                app:layout_column="1"
+                app:layout_row="3"
                 android:id="@+id/typeofwire"
                 style="@style/inputNumbers" />
 
             <TextView
+                app:layout_column="2"
+                app:layout_row="3"
                 style="@style/measure"
                 android:text="#" />
 
 
             <TextView
+                app:layout_column="0"
+                app:layout_row="4"
                 style="@style/inputLabel"
                 android:text="@string/target_speed" 
                />
 
             <EditText
+                app:layout_column="1"
+                app:layout_row="4"
                 android:id="@+id/txttargetspeed"
                 style="@style/inputNumbers" />
 
             <TextView
+                app:layout_column="2"
+                app:layout_row="4"
                 style="@style/measure"
                 android:text="m/s" />
 
       
-            <View/>
 
            <Button
+                    app:layout_column="1"
+                    app:layout_row="5"
                     android:id="@+id/btnSubmit"
                     android:ems="5"
                     android:text="@string/confirm" />
 
-            <View/>
 
 </android.support.v7.widget.GridLayout>
