--- a/res/layout/activity_steel_drawing.xml
+++ b/res/layout/activity_steel_drawing.xml
@@ -2,103 +2,121 @@
 <android.support.v7.widget.GridLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:useDefaultMargins="true"
+        android:layout_margin="3dp"
         app:columnCount="3"
-        app:rowCount="6">
+        app:rowCount="7">
+        
+            <TextView
+                app:layout_columnSpan="3"
+                app:layout_gravity="fill_horizontal"
+                app:layout_row="0"
+                android:text="DIE SCHEDULE" 
+                android:textStyle="bold"
+                android:textSize="25dp"
+                android:gravity = "center"
+                />
         
           <TextView
                 app:layout_column="0"
-                app:layout_row="0"
+                app:layout_row="1"
                 style="@style/inputLabel"
-                android:text="@string/inlet" />
+                android:text="@string/inlet" 
+                />
 
             <EditText
                 app:layout_column="1"
-                app:layout_row="0"
+                app:layout_row="1"
                 android:id="@+id/txtinlet"
+                app:layout_gravity="fill_horizontal"
                 style="@style/inputNumbers" />
 
             <TextView
                 app:layout_column="2"
-                app:layout_row="0"
+                app:layout_row="1"
                 style="@style/measure"
-                android:text="mm" />
+                android:text="mm" 
+               
+                />
 
             <TextView
                 app:layout_column="0"
-                app:layout_row="1"
+                app:layout_row="2"
                 style="@style/inputLabel"
                 android:text="@string/outlet" />
 
             <EditText
                 app:layout_column="1"
-                app:layout_row="1"
+                app:layout_row="2"
+                app:layout_gravity="fill_horizontal"
                 android:id="@+id/txtoutlet"
                 style="@style/inputNumbers" />
 
             <TextView
                 app:layout_column="2"
-                app:layout_row="1"
+                app:layout_row="2"
                 style="@style/measure"
                 android:text="mm" />
 
             <TextView
                 app:layout_column="0"
-                app:layout_row="2"
+                app:layout_row="3"
                 style="@style/inputLabel"
                 android:text="@string/n_of_blocks" />
 
             <EditText
                 app:layout_column="1"
-                app:layout_row="2"
+                app:layout_row="3"
+                app:layout_gravity="fill_horizontal"
                 android:id="@+id/txtnofblocks"
                 style="@style/inputNumbers"
                 android:hint="Max 10 blocks" />
 
             <TextView
                 app:layout_column="2"
-                app:layout_row="2"
+                app:layout_row="3"
                 style="@style/measure"
                 android:text="N°" />
 
            <TextView
                 app:layout_column="0"
-                app:layout_row="3"
+                app:layout_row="4"
                 style="@style/inputLabel"
                 android:text="@string/type_of_wire" 
             />
             <Spinner
                 app:layout_column="1"
-                app:layout_row="3"
+                app:layout_row="4"
+                app:layout_gravity="fill_horizontal"
                 android:id="@+id/typeofwire"
                 style="@style/inputNumbers" />
 
             <TextView
                 app:layout_column="2"
-                app:layout_row="3"
+                app:layout_row="4"
                 style="@style/measure"
                 android:text="#" />
 
 
             <TextView
                 app:layout_column="0"
-                app:layout_row="4"
+                app:layout_row="5"
                 style="@style/inputLabel"
                 android:text="@string/target_speed" 
                />
 
             <EditText
                 app:layout_column="1"
-                app:layout_row="4"
+                app:layout_row="5"
+                app:layout_gravity="fill_horizontal"
                 android:id="@+id/txttargetspeed"
                 style="@style/inputNumbers" />
 
             <TextView
                 app:layout_column="2"
-                app:layout_row="4"
+                app:layout_row="5"
                 style="@style/measure"
                 android:text="m/s" />
 
@@ -106,9 +124,10 @@
 
            <Button
                     app:layout_column="1"
-                    app:layout_row="5"
+                    app:layout_row="6"
                     android:id="@+id/btnSubmit"
                     android:ems="5"
+                    app:layout_gravity="fill_horizontal"
                     android:text="@string/confirm" />
 
 
