--- a/res/layout/activity_steel_drawing.xml
+++ b/res/layout/activity_steel_drawing.xml
@@ -32,6 +32,7 @@
                 app:layout_row="1"
                 android:id="@+id/txtinlet"
                 app:layout_gravity="fill_horizontal"
+                android:inputType="numberDecimal"
                 style="@style/inputNumbers" />
 
             <TextView
@@ -53,6 +54,7 @@
                 app:layout_row="2"
                 app:layout_gravity="fill_horizontal"
                 android:id="@+id/txtoutlet"
+                android:inputType="numberDecimal"
                 style="@style/inputNumbers" />
 
             <TextView
@@ -65,15 +67,17 @@
                 app:layout_column="0"
                 app:layout_row="3"
                 style="@style/inputLabel"
-                android:text="@string/n_of_blocks" />
+                android:text="@string/n_of_dies" />
 
-            <EditText
+            <NumberPicker
                 app:layout_column="1"
                 app:layout_row="3"
                 app:layout_gravity="fill_horizontal"
-                android:id="@+id/txtnofblocks"
+                android:id="@+id/n_of_dies"
                 style="@style/inputNumbers"
-                android:hint="Max 10 blocks" />
+                android:layout_height="60dp"
+                android:layout_width="wrap_content"
+                />
 
             <TextView
                 app:layout_column="2"
@@ -85,14 +89,18 @@
                 app:layout_column="0"
                 app:layout_row="4"
                 style="@style/inputLabel"
-                android:text="@string/type_of_wire" 
+                android:text="@string/carbon_content" 
             />
-            <Spinner
+           
+            <NumberPicker
                 app:layout_column="1"
                 app:layout_row="4"
                 app:layout_gravity="fill_horizontal"
-                android:id="@+id/typeofwire"
-                style="@style/inputNumbers" />
+                android:id="@+id/carbon_content"
+                style="@style/inputNumbers" 
+                android:layout_height="60dp"
+                android:layout_width="wrap_content"
+                />
 
             <TextView
                 app:layout_column="2"
