--- a/res/layout/activity_steel_drawing.xml
+++ b/res/layout/activity_steel_drawing.xml
@@ -25,6 +25,7 @@
                 app:layout_row="1"
                 style="@style/inputLabel"
                 android:text="@string/inlet" 
+                app:layout_gravity="center_vertical"
                 />
 
             <EditText
@@ -33,6 +34,7 @@
                 android:id="@+id/txtinlet"
                 app:layout_gravity="fill_horizontal"
                 android:inputType="numberDecimal"
+                android:text="1"
                 style="@style/inputNumbers" />
 
             <TextView
@@ -40,14 +42,14 @@
                 app:layout_row="1"
                 style="@style/measure"
                 android:text="mm" 
-               
-                />
+                app:layout_gravity="center_vertical"/>
 
             <TextView
                 app:layout_column="0"
                 app:layout_row="2"
                 style="@style/inputLabel"
-                android:text="@string/outlet" />
+                android:text="@string/outlet" 
+                app:layout_gravity="center_vertical"/>
 
             <EditText
                 app:layout_column="1"
@@ -55,42 +57,48 @@
                 app:layout_gravity="fill_horizontal"
                 android:id="@+id/txtoutlet"
                 android:inputType="numberDecimal"
-                style="@style/inputNumbers" />
+                style="@style/inputNumbers" 
+                android:text="1"
+                />
 
             <TextView
                 app:layout_column="2"
                 app:layout_row="2"
                 style="@style/measure"
-                android:text="mm" />
+                android:text="mm"
+                app:layout_gravity="center_vertical"/>
 
             <TextView
+                style="@style/inputLabel"
                 app:layout_column="0"
                 app:layout_row="3"
-                style="@style/inputLabel"
-                android:text="@string/n_of_dies" />
+                android:text="@string/n_of_dies" 
+                app:layout_gravity="center_vertical"
+                />
 
             <NumberPicker
                 app:layout_column="1"
                 app:layout_row="3"
-                app:layout_gravity="fill_horizontal"
                 android:id="@+id/n_of_dies"
                 style="@style/inputNumbers"
-                android:layout_height="60dp"
                 android:layout_width="wrap_content"
+                app:layout_gravity="fill_horizontal"
                 />
 
             <TextView
                 app:layout_column="2"
                 app:layout_row="3"
                 style="@style/measure"
-                android:text="N°" />
+                android:text="N°"
+                app:layout_gravity="center_vertical"
+                 />
 
            <TextView
-                app:layout_column="0"
-                app:layout_row="4"
-                style="@style/inputLabel"
-                android:text="@string/carbon_content" 
-            />
+               style="@style/inputLabel"
+               app:layout_column="0"
+               app:layout_row="4"
+               app:layout_gravity="center_vertical"
+               android:text="@string/carbon_content" />
            
             <NumberPicker
                 app:layout_column="1"
@@ -98,7 +106,6 @@
                 app:layout_gravity="fill_horizontal"
                 android:id="@+id/carbon_content"
                 style="@style/inputNumbers" 
-                android:layout_height="60dp"
                 android:layout_width="wrap_content"
                 />
 
@@ -106,14 +113,17 @@
                 app:layout_column="2"
                 app:layout_row="4"
                 style="@style/measure"
-                android:text="#" />
+                android:text="#" 
+                app:layout_gravity="center_vertical"
+                />
 
 
             <TextView
                 app:layout_column="0"
                 app:layout_row="5"
                 style="@style/inputLabel"
-                android:text="@string/target_speed" 
+                android:text="@string/target_speed"
+                app:layout_gravity="center_vertical" 
                />
 
             <EditText
@@ -121,13 +131,17 @@
                 app:layout_row="5"
                 app:layout_gravity="fill_horizontal"
                 android:id="@+id/txttargetspeed"
+                android:inputType="numberDecimal"
+                android:text="1"
                 style="@style/inputNumbers" />
 
             <TextView
                 app:layout_column="2"
                 app:layout_row="5"
                 style="@style/measure"
-                android:text="m/s" />
+                android:text="m/s" 
+                app:layout_gravity="center_vertical"
+                />
 
       
 
