--- a/res/layout/confirm_data.xml
+++ b/res/layout/confirm_data.xml
@@ -7,7 +7,7 @@
         android:useDefaultMargins="true"
         android:layout_margin="3dp"
         app:columnCount="3"
-        app:rowCount="7">
+        app:rowCount="12">
         
             <TextView
                 app:layout_columnSpan = "3"
@@ -20,17 +20,19 @@
                 android:layout_margin = "5dp"
                 />
         
+          <!-- INLET  -->
           <TextView
                 app:layout_column="0"
                 app:layout_row="1"
                 style="@style/inputLabel"
                 android:text="@string/inlet" 
+                app:layout_gravity="center_vertical"
                 />
 
             <TextView
                 app:layout_column="1"
                 app:layout_row="1"
-                android:id="@+id/txtinlet"
+                android:id="@+id/inlet"
                 app:layout_gravity="fill_horizontal"
                 style="@style/inputNumbers" />
 
@@ -39,93 +41,225 @@
                 app:layout_row="1"
                 style="@style/measure"
                 android:text="mm" 
-               
-                />
+                app:layout_gravity="center_vertical"/>
 
             <TextView
                 app:layout_column="0"
                 app:layout_row="2"
                 style="@style/inputLabel"
-                android:text="@string/outlet" />
+                android:text="@string/outlet" 
+                app:layout_gravity="center_vertical"/>
 
             <TextView
                 app:layout_column="1"
                 app:layout_row="2"
                 app:layout_gravity="fill_horizontal"
-                android:id="@+id/txtoutlet"
+                android:id="@+id/outlet"
                 style="@style/inputNumbers" />
 
             <TextView
                 app:layout_column="2"
                 app:layout_row="2"
                 style="@style/measure"
-                android:text="mm" />
+                android:text="mm"
+                app:layout_gravity="center_vertical"/>
 
             <TextView
+                style="@style/inputLabel"
                 app:layout_column="0"
                 app:layout_row="3"
-                style="@style/inputLabel"
-                android:text="@string/n_of_dies" />
+                android:text="@string/n_of_dies" 
+                app:layout_gravity="center_vertical"
+                />
 
             <TextView
                 app:layout_column="1"
                 app:layout_row="3"
-                app:layout_gravity="fill_horizontal"
-                android:id="@+id/txtnofblocks"
+                android:id="@+id/n_of_dies"
                 style="@style/inputNumbers"
+                android:layout_width="wrap_content"
+                app:layout_gravity="fill_horizontal"
                 />
 
             <TextView
                 app:layout_column="2"
                 app:layout_row="3"
                 style="@style/measure"
-                android:text="N°" />
+                android:text="N°"
+                app:layout_gravity="center_vertical"
+                 />
 
            <TextView
-                app:layout_column="0"
-                app:layout_row="4"
-                style="@style/inputLabel"
-                android:text="@string/type_of_wire" 
-            />
-            <Spinner
+               style="@style/inputLabel"
+               app:layout_column="0"
+               app:layout_row="4"
+               app:layout_gravity="center_vertical"
+               android:text="@string/carbon_content" />
+           
+            <TextView
                 app:layout_column="1"
                 app:layout_row="4"
                 app:layout_gravity="fill_horizontal"
-                android:id="@+id/typeofwire"
-                style="@style/inputNumbers" />
+                android:id="@+id/carbon_content"
+                style="@style/inputNumbers" 
+                android:layout_width="wrap_content"
+                />
 
             <TextView
                 app:layout_column="2"
                 app:layout_row="4"
                 style="@style/measure"
-                android:text="#" />
+                android:text="#" 
+                app:layout_gravity="center_vertical"
+                />
 
 
             <TextView
                 app:layout_column="0"
                 app:layout_row="5"
                 style="@style/inputLabel"
-                android:text="@string/target_speed" 
+                android:text="@string/target_speed"
+                app:layout_gravity="center_vertical" 
                />
 
             <TextView
                 app:layout_column="1"
                 app:layout_row="5"
                 app:layout_gravity="fill_horizontal"
-                android:id="@+id/txttargetspeed"
+                android:id="@+id/targetspeed"
                 style="@style/inputNumbers" />
 
             <TextView
                 app:layout_column="2"
                 app:layout_row="5"
                 style="@style/measure"
-                android:text="m/s" />
+                android:text="m/s" 
+                app:layout_gravity="center_vertical"
+                />
+    
+            <!-- SPEED WIRE INLET -->
+            <TextView
+                app:layout_column="0"
+                app:layout_row="6"
+                style="@style/inputLabel"
+                android:text="@string/speed_wire_inlet"
+                app:layout_gravity="center_vertical" 
+               />
 
+            <TextView
+                app:layout_column="1"
+                app:layout_row="6"
+                app:layout_gravity="fill_horizontal"
+                android:id="@+id/speedwireinlet"
+                style="@style/inputNumbers" />
+
+            <TextView
+                app:layout_column="2"
+                app:layout_row="6"
+                style="@style/measure"
+                android:text="m/s" 
+                app:layout_gravity="center_vertical"
+                />
+            
+             <!-- AVERAGE REDUCTION -->
+            <TextView
+                app:layout_column="0"
+                app:layout_row="7"
+                style="@style/inputLabel"
+                android:text="@string/average_reduction"
+                app:layout_gravity="center_vertical" 
+               />
+
+            <TextView
+                app:layout_column="1"
+                app:layout_row="7"
+                app:layout_gravity="fill_horizontal"
+                android:id="@+id/averagereduction"
+                style="@style/inputNumbers" />
+
+            <TextView
+                app:layout_column="2"
+                app:layout_row="7"
+                style="@style/measure"
+                android:text="%" 
+                app:layout_gravity="center_vertical"
+                />
+            
+             <!-- TOTAL REDUCTION -->
+            <TextView
+                app:layout_column="0"
+                app:layout_row="8"
+                style="@style/inputLabel"
+                android:text="@string/total_reduction"
+                app:layout_gravity="center_vertical" 
+               />
+
+            <TextView
+                app:layout_column="1"
+                app:layout_row="8"
+                app:layout_gravity="fill_horizontal"
+                android:id="@+id/totalreduction"
+                style="@style/inputNumbers" />
+
+            <TextView
+                app:layout_column="2"
+                app:layout_row="8"
+                style="@style/measure"
+                android:text="%" 
+                app:layout_gravity="center_vertical"
+                />
       
+             <!-- INLET T/S -->
+            <TextView
+                app:layout_column="0"
+                app:layout_row="9"
+                style="@style/inputLabel"
+                android:text="@string/inlet_ts"
+                app:layout_gravity="center_vertical" 
+               />
+
+            <TextView
+                app:layout_column="1"
+                app:layout_row="9"
+                app:layout_gravity="fill_horizontal"
+                android:id="@+id/inletts"
+                style="@style/inputNumbers" />
+
+            <TextView
+                app:layout_column="2"
+                app:layout_row="9"
+                style="@style/measure"
+                android:text="N/mm^2" 
+                app:layout_gravity="center_vertical"
+                />
+            
+             <!-- OUTLET T/S -->
+            <TextView
+                app:layout_column="0"
+                app:layout_row="10"
+                style="@style/inputLabel"
+                android:text="@string/outlet_ts"
+                app:layout_gravity="center_vertical" 
+               />
+
+            <TextView
+                app:layout_column="1"
+                app:layout_row="10"
+                app:layout_gravity="fill_horizontal"
+                android:id="@+id/outletts"
+                style="@style/inputNumbers" />
+
+            <TextView
+                app:layout_column="2"
+                app:layout_row="10"
+                style="@style/measure"
+                android:text="N/mm^2" 
+                app:layout_gravity="center_vertical"
+                />
 
            <Button
                     app:layout_column="1"
-                    app:layout_row="6"
+                    app:layout_row="11"
                     android:id="@+id/btnSubmit"
                     android:ems="5"
                     app:layout_gravity="fill_horizontal"
