--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -18,16 +18,14 @@
     </style>
 
     <style name="inputNumbers">
-       
+       <item name="android:layout_height">40dp</item>
     </style>
     
     <style name="inputLabel">
-        <item name="android:layout_gravity">center</item>
-        <item name="android:gravity">center_vertical</item>
     </style>
     
      <style name="measure">
-         <item name="android:padding">5px</item>
+         <item name="android:padding">5dp</item>
          <item name="android:gravity">center</item>
     </style>
 </resources>
