--- a/res/layout/activity_steel_drawing.xml
+++ b/res/layout/activity_steel_drawing.xml
@@ -77,6 +77,7 @@
                 />
 
             <NumberPicker
+                android:layout_height="100dp"
                 app:layout_column="1"
                 app:layout_row="3"
                 android:id="@+id/n_of_dies"
@@ -101,6 +102,7 @@
                android:text="@string/carbon_content" />
            
             <NumberPicker
+                android:layout_height="100dp"
                 app:layout_column="1"
                 app:layout_row="4"
                 app:layout_gravity="fill_horizontal"
