--- a/res/layout/confirm_data.xml
+++ b/res/layout/confirm_data.xml
@@ -24,7 +24,7 @@
           <TextView
                 app:layout_column="0"
                 app:layout_row="1"
-                style="@style/inputLabel"
+                style="@style/confirmValue"
                 android:text="@string/inlet" 
                 app:layout_gravity="center_vertical"
                 />
@@ -46,7 +46,7 @@
             <TextView
                 app:layout_column="0"
                 app:layout_row="2"
-                style="@style/inputLabel"
+                style="@style/confirmValue"
                 android:text="@string/outlet" 
                 app:layout_gravity="center_vertical"/>
 
@@ -65,7 +65,7 @@
                 app:layout_gravity="center_vertical"/>
 
             <TextView
-                style="@style/inputLabel"
+                style="@style/confirmValue"
                 app:layout_column="0"
                 app:layout_row="3"
                 android:text="@string/n_of_dies" 
@@ -90,7 +90,7 @@
                  />
 
            <TextView
-               style="@style/inputLabel"
+               style="@style/confirmValue"
                app:layout_column="0"
                app:layout_row="4"
                app:layout_gravity="center_vertical"
@@ -117,7 +117,7 @@
             <TextView
                 app:layout_column="0"
                 app:layout_row="5"
-                style="@style/inputLabel"
+                style="@style/confirmValue"
                 android:text="@string/target_speed"
                 app:layout_gravity="center_vertical" 
                />
@@ -141,7 +141,7 @@
             <TextView
                 app:layout_column="0"
                 app:layout_row="6"
-                style="@style/inputLabel"
+                style="@style/confirmValue"
                 android:text="@string/speed_wire_inlet"
                 app:layout_gravity="center_vertical" 
                />
@@ -165,7 +165,7 @@
             <TextView
                 app:layout_column="0"
                 app:layout_row="7"
-                style="@style/inputLabel"
+                style="@style/confirmValue"
                 android:text="@string/average_reduction"
                 app:layout_gravity="center_vertical" 
                />
@@ -189,7 +189,7 @@
             <TextView
                 app:layout_column="0"
                 app:layout_row="8"
-                style="@style/inputLabel"
+                style="@style/confirmValue"
                 android:text="@string/total_reduction"
                 app:layout_gravity="center_vertical" 
                />
@@ -213,7 +213,7 @@
             <TextView
                 app:layout_column="0"
                 app:layout_row="9"
-                style="@style/inputLabel"
+                style="@style/confirmValue"
                 android:text="@string/inlet_ts"
                 app:layout_gravity="center_vertical" 
                />
@@ -237,7 +237,7 @@
             <TextView
                 app:layout_column="0"
                 app:layout_row="10"
-                style="@style/inputLabel"
+                style="@style/confirmValue"
                 android:text="@string/outlet_ts"
                 app:layout_gravity="center_vertical" 
                />
