--- a/res/layout/activity_steel_drawing.xml
+++ b/res/layout/activity_steel_drawing.xml
@@ -76,7 +76,7 @@
                 app:layout_gravity="center_vertical"
                 />
 
-            <NumberPicker
+            <Spinner
                 android:layout_height="100dp"
                 app:layout_column="1"
                 app:layout_row="3"
@@ -101,7 +101,7 @@
                app:layout_gravity="center_vertical"
                android:text="@string/carbon_content" />
            
-            <NumberPicker
+            <Spinner
                 android:layout_height="100dp"
                 app:layout_column="1"
                 app:layout_row="4"
