--- a/res/layout/confirm_data.xml
+++ b/res/layout/confirm_data.xml
@@ -6,12 +6,14 @@
 <android.support.v7.widget.GridLayout
         
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:useDefaultMargins="true"
         android:layout_margin="3dp"
-        app:columnCount="3"
-        app:rowCount="12">
+        app:columnCount="4"
+        app:rowCount="12"
+        android:layout_gravity="center_horizontal"
+        >
         
             <TextView
                 app:layout_columnSpan = "3"
@@ -30,7 +32,7 @@
                 app:layout_row="1"
                 style="@style/confirmValue"
                 android:text="@string/inlet" 
-                app:layout_gravity="center_vertical"
+                app:layout_gravity="fill_vertical|fill_horizontal"
                 />
 
             <TextView
@@ -39,8 +41,6 @@
                 app:layout_column="1"
                 app:layout_gravity="fill_horizontal"
                 app:layout_row="1"
-                android:gravity="center_vertical"
-                android:text="canegonfio "
                />
 
             <TextView
@@ -48,14 +48,14 @@
                 app:layout_row="1"
                 style="@style/measure"
                 android:text="mm" 
-                app:layout_gravity="center_vertical"/>
+                app:layout_gravity="fill_vertical|fill_horizontal"/>
 
             <TextView
                 app:layout_column="0"
                 app:layout_row="2"
                 style="@style/confirmValue"
                 android:text="@string/outlet" 
-                app:layout_gravity="center_vertical"/>
+                app:layout_gravity="fill_vertical|fill_horizontal"/>
 
             <TextView
                 app:layout_column="1"
@@ -69,14 +69,14 @@
                 app:layout_row="2"
                 style="@style/measure"
                 android:text="mm"
-                app:layout_gravity="center_vertical"/>
+                app:layout_gravity="fill_vertical|fill_horizontal"/>
 
             <TextView
                 style="@style/confirmValue"
                 app:layout_column="0"
                 app:layout_row="3"
                 android:text="@string/n_of_dies" 
-                app:layout_gravity="center_vertical"
+                app:layout_gravity="fill_vertical|fill_horizontal"
                 />
 
             <TextView
@@ -93,14 +93,14 @@
                 app:layout_row="3"
                 style="@style/measure"
                 android:text="N°"
-                app:layout_gravity="center_vertical"
+                app:layout_gravity="fill_vertical|fill_horizontal"
                  />
 
            <TextView
                style="@style/confirmValue"
                app:layout_column="0"
                app:layout_row="4"
-               app:layout_gravity="center_vertical"
+               app:layout_gravity="fill_vertical|fill_horizontal"
                android:text="@string/carbon_content" />
            
             <TextView
@@ -117,7 +117,7 @@
                 app:layout_row="4"
                 style="@style/measure"
                 android:text="#" 
-                app:layout_gravity="center_vertical"
+                app:layout_gravity="fill_vertical|fill_horizontal"
                 />
 
 
@@ -126,7 +126,7 @@
                 app:layout_row="5"
                 style="@style/confirmValue"
                 android:text="@string/target_speed"
-                app:layout_gravity="center_vertical" 
+                app:layout_gravity="fill_vertical|fill_horizontal" 
                />
 
             <TextView
@@ -141,7 +141,7 @@
                 app:layout_row="5"
                 style="@style/measure"
                 android:text="m/s" 
-                app:layout_gravity="center_vertical"
+                app:layout_gravity="fill_vertical|fill_horizontal"
                 />
     
             <!-- SPEED WIRE INLET -->
@@ -150,7 +150,7 @@
                 app:layout_row="6"
                 style="@style/confirmValue"
                 android:text="@string/speed_wire_inlet"
-                app:layout_gravity="center_vertical" 
+                app:layout_gravity="fill_vertical|fill_horizontal"
                />
 
             <TextView
@@ -165,7 +165,7 @@
                 app:layout_row="6"
                 style="@style/measure"
                 android:text="m/s" 
-                app:layout_gravity="center_vertical"
+                app:layout_gravity="fill_vertical|fill_horizontal"
                 />
             
              <!-- AVERAGE REDUCTION -->
@@ -174,7 +174,7 @@
                 app:layout_row="7"
                 style="@style/confirmValue"
                 android:text="@string/average_reduction"
-                app:layout_gravity="center_vertical" 
+                app:layout_gravity="fill_vertical|fill_horizontal" 
                />
 
             <TextView
@@ -189,7 +189,7 @@
                 app:layout_row="7"
                 style="@style/measure"
                 android:text="%" 
-                app:layout_gravity="center_vertical"
+                app:layout_gravity="fill_vertical|fill_horizontal"
                 />
             
              <!-- TOTAL REDUCTION -->
@@ -198,7 +198,7 @@
                 app:layout_row="8"
                 style="@style/confirmValue"
                 android:text="@string/total_reduction"
-                app:layout_gravity="center_vertical" 
+                app:layout_gravity="fill_vertical|fill_horizontal"
                />
 
             <TextView
@@ -213,7 +213,7 @@
                 app:layout_row="8"
                 style="@style/measure"
                 android:text="%" 
-                app:layout_gravity="center_vertical"
+                app:layout_gravity="fill_vertical|fill_horizontal"
                 />
       
              <!-- INLET T/S -->
@@ -222,7 +222,7 @@
                 app:layout_row="9"
                 style="@style/confirmValue"
                 android:text="@string/inlet_ts"
-                app:layout_gravity="center_vertical" 
+                app:layout_gravity="fill" 
                />
 
             <TextView
@@ -237,7 +237,7 @@
                 app:layout_row="9"
                 style="@style/measure"
                 android:text="N/mm^2" 
-                app:layout_gravity="center_vertical"
+                app:layout_gravity="fill"
                 />
             
              <!-- OUTLET T/S -->
@@ -246,13 +246,13 @@
                 app:layout_row="10"
                 style="@style/confirmValue"
                 android:text="@string/outlet_ts"
-                app:layout_gravity="center_vertical" 
+                app:layout_gravity="fill"
                />
 
             <TextView
                 app:layout_column="1"
                 app:layout_row="10"
-                app:layout_gravity="fill_horizontal"
+                app:layout_gravity="fill"
                 android:id="@+id/outletts"
                 style="@style/inputNumbers" />
 
@@ -261,8 +261,15 @@
                 app:layout_row="10"
                 style="@style/measure"
                 android:text="N/mm^2" 
-                app:layout_gravity="center_vertical"
+                app:layout_gravity="fill"
                 />
+            
+             <android.support.v7.widget.Space
+               app:layout_column="3"
+               app:layout_row="0"
+               app:layout_rowSpan="12"
+               app:layout_gravity="fill"
+               />
 
            <Button
                     app:layout_column="1"
