--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -14,7 +14,7 @@
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+        <item name="android:textSize">18sp</item>
     </style>
 
     <style name="inputNumbers">
@@ -30,14 +30,11 @@
          <item name="android:background">@color/Blue</item>
         <item name="android:gravity">left|center_vertical</item> 
         <item name="android:textColor">@color/White</item>
-        <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item> 
         <item name="android:padding">10dp</item>
     </style>
     
-    <style name="confirmValue">
-        <item name="android:padding">10dp</item>
-         <item name="android:gravity">left|center_vertical</item>
+    <style name="confirmValue" parent="inputLabel">
         
     </style>
     
@@ -45,7 +42,6 @@
         <item name="android:background">@color/Blue</item>
         <item name="android:gravity">left|center_vertical</item> 
         <item name="android:textColor">@color/White</item>
-        <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item> 
         <item name="android:padding">10dp</item>
         <item name="android:layout_width">wrap_content</item>
