Create new style for main activity

--- a/res/layout/activity_steel_drawing.xml
+++ b/res/layout/activity_steel_drawing.xml
@@ -8,8 +8,7 @@
         android:layout_margin="3dp"
         app:columnCount="4"
         app:rowCount="7"
-        android:layout_gravity="center_horizontal"
-        >
+        android:layout_gravity="center_horizontal">
         
             <TextView
                 app:layout_columnSpan = "3"
