--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -14,7 +14,6 @@
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
-        <item name="android:textSize">18sp</item>
     </style>
 
     <style name="inputNumbers">
@@ -26,25 +25,30 @@
        
     </style>
     
-    <style name="inputLabel" >
+    
+    
+    <style name="leftColumnLayout">
          <item name="android:background">@color/Blue</item>
-        <item name="android:gravity">left|center_vertical</item> 
+         <item name="android:layout_width">200dp</item>
+         <item name="android:layout_height">wrap_content</item>
+    </style>
+    
+    <style name="inputLabel"  parent="@android:style/TextAppearance.Medium">
+         <item name="android:layout_width">match_parent</item>
+         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/White</item>
-        <item name="android:textStyle">bold</item> 
-        <item name="android:padding">10dp</item>
+        <item name="android:gravity">right|bottom</item>
+    </style>
+    
+     <style name="measure" parent="@android:style/TextAppearance.Small">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/White</item>
+        <item name="android:gravity">right</item>
     </style>
     
     <style name="confirmValue" parent="inputLabel">
         
-    </style>
-    
-     <style name="measure">
-        <item name="android:background">@color/Blue</item>
-        <item name="android:gravity">left|center_vertical</item> 
-        <item name="android:textColor">@color/White</item>
-        <item name="android:textStyle">bold</item> 
-        <item name="android:padding">10dp</item>
-        <item name="android:layout_width">wrap_content</item>
     </style>
     
      
