--- a/res/layout/activity_steel_drawing.xml
+++ b/res/layout/activity_steel_drawing.xml
@@ -1,167 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.GridLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:useDefaultMargins="true"
-        android:layout_margin="3dp"
-        app:columnCount="4"
-        app:rowCount="7"
-        android:layout_gravity="center_horizontal">
-        
-            <TextView
-                app:layout_columnSpan = "3"
-                app:layout_gravity = "fill_horizontal"
-                app:layout_row = "0"
-                android:text = "@string/dieschedule" 
-                android:textStyle = "bold"
-                android:textSize = "25sp"
-                android:gravity = "center"
-                android:layout_margin = "5dp"
-                
-                />
-        
-          <TextView
-                app:layout_column="0"
-                app:layout_row="1"
-                style="@style/inputLabel"
-                android:text="@string/inlet"
-                app:layout_gravity="fill"
-                
-                />
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_horizontal"
+    android:layout_margin="3dp"
+    android:orientation="vertical"
+    android:useDefaultMargins="true" >
 
-            <EditText
-                app:layout_column="1"
-                app:layout_row="1"
-                android:id="@+id/txtinlet"
-                app:layout_gravity="fill_horizontal"
-                android:inputType="numberDecimal"
-                android:text="6.50"
-                style="@style/inputNumbers"
-                />
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_gravity="center"
+        android:text="@string/dieschedule"
+        android:textSize="25sp"
+        android:textStyle="bold" 
+        android:background="@color/Red"
+        android:padding="10dp"
+        android:gravity="center"
+        />
 
-            <TextView
-                app:layout_column="2"
-                app:layout_row="1"
-                style="@style/measure"
-                android:text="mm" 
-                app:layout_gravity="fill"
-                />
+    <LinearLayout style="@style/form_layout" >
 
-            <TextView
-                app:layout_column="0"
-                app:layout_row="2"
-                style="@style/inputLabel"
-                android:text="@string/outlet"
-                 app:layout_gravity="fill"
-                />
+        <TextView
+            style="@style/inputLabel"
+            android:text="@string/inlet" />
 
-            <EditText
-                app:layout_column="1"
-                app:layout_row="2"
-                app:layout_gravity="fill_horizontal"
-                android:id="@+id/txtoutlet"
-                android:inputType="numberDecimal"
-                style="@style/inputNumbers" 
-                android:text="2.0"
-                />
+        <EditText
+            android:id="@+id/txtinlet"
+            style="@style/inputNumbers"
+            android:inputType="numberDecimal"
+            android:text="6.50" />
 
-            <TextView
-                app:layout_column="2"
-                app:layout_row="2"
-                style="@style/measure"
-                android:text="mm"
-                app:layout_gravity="fill"/>
+        <TextView
+            style="@style/measure"
+            android:text="mm" />
+    </LinearLayout>
 
-            <TextView
-                style="@style/inputLabel"
-                app:layout_column="0"
-                app:layout_row="3"
-                android:text="@string/n_of_dies" 
-                app:layout_gravity="fill_vertical|fill_horizontal"
-                />
+    <LinearLayout style="@style/form_layout" >
 
-            <Spinner
-                app:layout_column="1"
-                app:layout_row="3"
-                android:id="@+id/n_of_dies"
-                style="@style/inputNumbers"
-                app:layout_gravity="fill_horizontal"
-                />
+        <TextView
+            style="@style/inputLabel"
+            android:text="@string/outlet" />
 
-            <TextView
-                app:layout_column="2"
-                app:layout_row="3"
-                style="@style/measure"
-                android:text="N°"
-                app:layout_gravity="fill_vertical|fill_horizontal"
-                 />
+        <EditText
+            android:id="@+id/txtoutlet"
+            style="@style/inputNumbers"
+            android:inputType="numberDecimal"
+            android:text="2.0" />
 
-           <TextView
-               style="@style/inputLabel"
-               app:layout_column="0"
-               app:layout_row="4"
-               app:layout_gravity="fill_vertical|fill_horizontal"
-               android:text="@string/carbon_content" />
-           
-            <Spinner
-                app:layout_column="1"
-                app:layout_row="4"
-                app:layout_gravity="fill_horizontal"
-                android:id="@+id/carbon_content"
-                style="@style/inputNumbers" 
-                android:layout_width="wrap_content"
-                />
+        <TextView
+            style="@style/measure"
+            android:text="mm" />
+    </LinearLayout>
 
-            <TextView
-                app:layout_column="2"
-                app:layout_row="4"
-                style="@style/measure"
-                android:text="#" 
-                app:layout_gravity="fill_vertical|fill_horizontal"
-                />
+    <LinearLayout style="@style/form_layout" >
 
+        <TextView
+            style="@style/inputLabel"
+            android:text="@string/n_of_dies" />
 
-            <TextView
-                app:layout_column="0"
-                app:layout_row="5"
-                style="@style/inputLabel"
-                android:text="@string/target_speed"
-                app:layout_gravity="fill_vertical|fill_horizontal" 
-               />
+        <Spinner
+            android:id="@+id/n_of_dies"
+            style="@style/inputNumbers" />
 
-            <EditText
-                app:layout_column="1"
-                app:layout_row="5"
-                app:layout_gravity="fill_horizontal"
-                android:id="@+id/txttargetspeed"
-                android:inputType="numberDecimal"
-                android:text="10.0"
-                style="@style/inputNumbers" />
+        <TextView
+            style="@style/measure"
+            android:text="N°" />
+    </LinearLayout>
 
-            <TextView
-                app:layout_column="2"
-                app:layout_row="5"
-                style="@style/measure"
-                android:text="m/s" 
-                app:layout_gravity="fill_vertical|fill_horizontal"
-                />
+    <LinearLayout style="@style/form_layout" >
 
-            <android.support.v7.widget.Space
-               app:layout_column="3"
-               app:layout_row="0"
-               app:layout_rowSpan="6"
-               app:layout_gravity="fill"
-               />
+        <TextView
+            style="@style/inputLabel"
+            android:text="@string/carbon_content" />
 
-           <Button
-                    app:layout_column="1"
-                    app:layout_row="6"
-                    android:id="@+id/btnSubmit"
-                    android:ems="5"
-                    app:layout_gravity="fill_horizontal"
-                    android:text="@string/confirm" />
+        <Spinner
+            android:id="@+id/carbon_content"
+            style="@style/inputNumbers" />
 
+        <TextView
+            style="@style/measure"
+            android:text="#" />
+    </LinearLayout>
 
-</android.support.v7.widget.GridLayout>
+    <LinearLayout style="@style/form_layout" >
+
+        <TextView
+            style="@style/inputLabel"
+            android:text="@string/target_speed" />
+
+        <EditText
+            android:id="@+id/txttargetspeed"
+            style="@style/inputNumbers"
+            android:inputType="numberDecimal"
+            android:text="10" />
+
+        <TextView
+            style="@style/measure"
+            android:text="m/s" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btnSubmit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="5"
+        android:text="@string/confirm" />
+
+</LinearLayout>
