improve UI for show result table

--- a/res/layout/result_item_odd.xml
+++ b/res/layout/result_item_odd.xml
@@ -3,6 +3,7 @@
     android:id="@+id/text"
     android:gravity="center"
     android:minWidth="30dp"
-    style="@style/headerColumn">
+    style="@style/headerColumn"
+     android:background="@color/Grey2"
+    />
        
-</TextView>
