--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -4,6 +4,7 @@
  <color name="Grey2">#919092</color>
  <color name="Grey3">#908391</color>
  <color name="Red">#BF0107</color>
+ <color name="Red2">#a51d22</color>
  <color name="GreyDark">#221C1C</color>
  <color name="White">#FFFFFF</color>
 </resources>
