--- a/res/layout/show_results.xml
+++ b/res/layout/show_results.xml
@@ -3,6 +3,17 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
+    <HorizontalScrollView
+android:layout_width="fill_parent"
+android:layout_height="fill_parent"
+android:scrollbarStyle="insideInset"
+android:fadeScrollbars="true"
+android:scrollbarSize="10dip"
+android:fitsSystemWindows="true">
+        
+    
+    
+    
 <android.support.v7.widget.GridLayout
         android:id="@+id/gd_show_result"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -66,6 +77,22 @@
                 app:layout_row = "1"
                 app:layout_column = "3"
                 android:text = "Total"
+                style="@style/headerColumn.tableUOM"
+                />
+        
+       
+        
+        <TextView
+                app:layout_row = "2"
+                app:layout_column = "2"
+                android:text = ""
+                style="@style/headerColumn.tableAboveValue"
+                />
+        
+        <TextView
+                app:layout_row = "2"
+                app:layout_column = "3"
+                android:text = ""
                 style="@style/headerColumn.tableAboveValue"
                 />
         
@@ -179,4 +206,5 @@
         
         
     </android.support.v7.widget.GridLayout>
+    </HorizontalScrollView>
 </ScrollView>
