--- a/res/layout/show_results.xml
+++ b/res/layout/show_results.xml
@@ -1,25 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent" xmlns:app="http://schemas.android.com/apk/res/com.cgmconcept">
 
-    <HorizontalScrollView
-android:layout_width="fill_parent"
-android:layout_height="fill_parent"
-android:scrollbarStyle="insideInset"
-android:fadeScrollbars="true"
-android:scrollbarSize="10dip"
-android:fitsSystemWindows="true">
-        
-    
-    
-    
 <android.support.v7.widget.GridLayout
         android:id="@+id/gd_show_result"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:useDefaultMargins="true"
+        app:useDefaultMargins="false"
         android:layout_margin="3dp"
         app:columnCount="9"
         app:rowCount="12"
@@ -206,5 +195,4 @@ android:fitsSystemWindows="true">
         
         
     </android.support.v7.widget.GridLayout>
-    </HorizontalScrollView>
 </ScrollView>
