--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -77,9 +77,8 @@
          <item name="android:minWidth">80dp</item>
          <item name="android:padding">2dp</item>
          <item name="android:layout_width">wrap_content</item>
+         <item name="android:minHeight">30dp</item>
          <item name="android:textSize">16sp</item>
-         <item name="android:layout_marginLeft">1dp</item>
-         <item name="android:layout_marginRight">1dp</item>
      </style>
      
      <style name="headerColumn.tableHeader" >
