--- a/res/layout/result_item_pair.xml
+++ b/res/layout/result_item_pair.xml
@@ -3,6 +3,6 @@
     android:id="@+id/text"
     android:gravity="center"
     style="@style/headerColumn"
-    android:background="@color/Grey1"
+    android:background="@color/LightGray"
     />
        
