--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -79,6 +79,7 @@
          <item name="android:layout_width">wrap_content</item>
          <item name="android:minHeight">30dp</item>
          <item name="android:textSize">16sp</item>
+         <item name="android:textColor">@color/Black</item>
      </style>
      
      <style name="headerColumn.tableHeader" >
@@ -88,6 +89,7 @@
          <item name="android:textColor">@color/White</item>
      	 <item name="android:layout_width">wrap_content</item>	
      	 <item name="android:layout_height">wrap_content</item>
+     	 <item name="android:layout_marginLeft">2dp</item>
      </style>
      
       <style name="headerColumn.tableHeader.headerDoubleColumn">
@@ -101,6 +103,7 @@
           <item name="android:textSize">16sp</item>
            <item name="android:layout_width">match_parent</item>	
      	 <item name="android:layout_height">wrap_content</item>
+     	  <item name="android:layout_marginLeft">2dp</item>
      </style>
      
      <style name="headerColumn.tableAboveValue">
